<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activitys.InputDataActivity">

    <CheckBox
        android:id="@+id/cbTankIsEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/cb_tank_is_empty"
        android:textColor="@color/primary_text_material_light"
        android:textSize="@dimen/body_text_size" />

    <TextView
        android:id="@+id/tvCurrentMileageCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_current_mileage_car"
        android:textColor="@color/primary_text_material_light"
        android:textSize="@dimen/body_text_size" />

    <EditText
        android:id="@+id/etCurrentMileageCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="numberDecimal"
        android:textColor="@color/primary_text_material_light"
        android:textSize="@dimen/body_text_size" />

    <TextView
        android:id="@+id/tvNumberOfLiters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_number_of_liters"
        android:textColor="@color/primary_text_material_light"
        android:textSize="@dimen/body_text_size" />

    <EditText
        android:id="@+id/etNumberOfLiters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="numberDecimal"
        android:textColor="@color/primary_text_material_light"
        android:textSize="@dimen/body_text_size" />

    <TextView
        android:id="@+id/tvRefillPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_refill_price"
        android:textColor="@color/primary_text_material_light"
        android:textSize="@dimen/body_text_size" />

    <EditText
        android:id="@+id/etRefillPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="numberDecimal"
        android:textColor="@color/primary_text_material_light"
        android:textSize="@dimen/body_text_size" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickOk"
        android:text="@string/btn_ok"
        android:layout_gravity="right" />

</LinearLayout>
